fix: pre overflow

--- a/docs/.vitepress/theme/Styles/main.css
+++ b/docs/.vitepress/theme/Styles/main.css
@@ -15,3 +15,8 @@
 main img {
 	max-width: 100%;
 }
+
+pre {
+	white-space: pre-wrap;
+	word-wrap: break-word;
+}
